--- a/src/Layout/DefaultLayout/Header/HeaderNav/HeaderNav.module.scss
+++ b/src/Layout/DefaultLayout/Header/HeaderNav/HeaderNav.module.scss
@@ -1,4 +1,33 @@
 .header-nav {
-    height: 106px;
+    --theme-color: #0d5ef4;
+    --title-color: #0f2239;
+    --black-color: #000000;
+    --white-color: #ffffff;
+    --border-color: #ffffff33;
+    --transition: all 0.3s linear;
+    --main-container: 1380px;
+    --header-top: 54px;
+    --header-nav: 106px;
+
+    height: var(--header-nav);
+    // background-color: var(--white-color);
     background-color: yellow;
+}
+
+.wrapper {
+    max-width: var(--main-container);
+    height: 100%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.logo {
+
+}
+
+.img {
+    width: 180px;
+    height: auto;
 }
