Fix lại code và kết thúc UI Header

--- a/src/Layout/DefaultLayout/Header/HeaderNav/HeaderNav.module.scss
+++ b/src/Layout/DefaultLayout/Header/HeaderNav/HeaderNav.module.scss
@@ -79,6 +79,7 @@
 .sub-menu {
     min-width: 190px;
     padding: 18px 20px;
+    background-color: var(--white-color);
     border-radius: 10px;
     border: 1px solid rgb(236, 241, 249);
     box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.15);
