Thêm Slider (kết thúc slider)

--- a/src/Layout/HeaderOnly/Slider/Container/Container.module.scss
+++ b/src/Layout/HeaderOnly/Slider/Container/Container.module.scss
@@ -56,8 +56,7 @@
     max-width: 660px;
     max-height: 660px;
     z-index: 6;
-    // position: relative;
-    // right: -90px;
+    border-radius: 50%;
 }
 
 .custom-btn {
