--- a/src/Layout/HeaderOnly/Slider/Slider.module.scss
+++ b/src/Layout/HeaderOnly/Slider/Slider.module.scss
@@ -119,6 +119,13 @@
     }
 }
 
+.custom-img {
+    width: 660px;
+    height: 660px;
+    border-radius: 50%;
+    border: 20px solid #fff;
+}
+
 :global(.swiper-pagination-bullet) {
     width: 10px;
     height: 10px;
