Thay lại ảnh slider content 3

--- a/src/Layout/HeaderOnly/Slider/Slider.module.scss
+++ b/src/Layout/HeaderOnly/Slider/Slider.module.scss
@@ -124,6 +124,7 @@
     height: 660px;
     border-radius: 50%;
     border: 20px solid #fff;
+    object-fit: cover;
 }
 
 :global(.swiper-pagination-bullet) {
