--- a/src/Layout/DefaultLayout/Header/HeaderTop/HeaderTop.module.scss
+++ b/src/Layout/DefaultLayout/Header/HeaderTop/HeaderTop.module.scss
@@ -53,6 +53,16 @@
     margin-right: 20px;
 }
 
+.link {
+    color: var(--white-color);
+    cursor: pointer;
+    transition: var(--transition);
+
+    &:hover {
+        color: var(--black-color);
+    }
+}
+
 .phone-link,
 .mail-link,
 .user {
