--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -103,25 +103,24 @@ span.Button_title__yIuSg {
 
 //Button size
 .Small {
-    width: 100%;
+    // width: 100%;
     height: 35.8px;
-    // padding: 10.5px 20px;
 }
 
 .Medium {
-    width: 100%;
+    // width: 100%;
     height: 45.8px;
-    // padding: 15.5px 27px;
+    padding: 20px;
 }
 
 .Large {
-    width: 100%;
+    // width: 100%;
     height: 50.8px;
-    // padding: 18px 29px;
+    padding: 20px;
 }
 
 .ExtraLarge {
-    width: 100%;
+    // width: 100%;
     height: 55.8px;
-    // padding: 20.5px 29px;
+    padding: 20px;
 }
