--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -21,3 +21,7 @@ body.dark header {
     transition: all 0.3s linear;
     color: #ffffff;
 }
+
+body.dark h2 {
+    color: var(--theme-color) !important;
+}
