--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -1,5 +1,6 @@
 @import 'normalize.css';
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
 * {
     margin: 0;
@@ -31,6 +32,7 @@
     --ripple-ani-duration: 5s;
     --transition: all 0.3s linear;
     --animation-fadeIn: slideIn 0.3s ease forwards;
+    --font-Roboto: "Roboto", serif;
 }
 
 html {
@@ -63,6 +65,14 @@ a {
 img {
     max-width: 100%;
     height: auto;
+}
+
+// 
+p {
+    font-family: var(--font-Roboto);
+    margin: 0 0 18px 0;
+    color: var(--body-color);
+    line-height: 1.75;
 }
 
 /* Đặt mặc định cho các thẻ form */
