--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -20,9 +20,10 @@
     justify-content: center;
     align-items: center;
     gap: 10px;
-    font-size: 1.6rem;
+    font-size: 1.4rem;
     font-weight: 700;
     font-family: var(--font-family-primary);
+    text-transform: uppercase;
     min-width: 100px;
     padding: 9px 16px;
     border-radius: 5px;
