--- a/src/components/Title/Title.module.scss
+++ b/src/components/Title/Title.module.scss
@@ -8,6 +8,7 @@
             margin-top: -0.41em;
             margin-bottom: 22px;
             display: block;
+            letter-spacing: -0.1rem;
         }
 
         .icon {
