Hoàn thành UI phần PopularCourse, BannerContent, cài đặt thư viện React PlayerVideo

--- a/src/pages/Home/PopularCourse/PopularCourse.module.scss
+++ b/src/pages/Home/PopularCourse/PopularCourse.module.scss
@@ -1,6 +1,11 @@
 .pp-course {
-    padding-top: 80px;
-
+    background-image: url('../../../assets/images/Home/ProductContent/course_bg_1-2.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    padding: 100px 0;
+    margin-top: 100px;
 
     .wrapper {
         max-width: var(--main-container) !important;
