--- a/src/pages/Home/PopularCourse/PopularCourse.module.scss
+++ b/src/pages/Home/PopularCourse/PopularCourse.module.scss
@@ -10,6 +10,7 @@
     .wrapper {
         max-width: var(--main-container) !important;
         margin: 0 auto;
+        padding: 0 20px;
     }
 }
 
