--- a/src/Layout/DefaultLayout/Header/HeaderNav/HeaderNav.module.scss
+++ b/src/Layout/DefaultLayout/Header/HeaderNav/HeaderNav.module.scss
@@ -15,13 +15,17 @@
 }
 
 .ps-fix {
-    position: fixed;
-    top: 0;
-    right: 0;
-    left: 0;
-    z-index: 9999;
-    height: 86px;
-    transition: var(--transition);
+    // position: fixed;
+    // top: 0;
+    // right: 0;
+    // left: 0;
+    // z-index: 3;
+    // height: 86px;
+    // transition: var(--transition);
+}
+
+.dp-none {
+    display: none;
 }
 
 .wrapper {
