--- a/src/components/Banner/Banner.module.scss
+++ b/src/components/Banner/Banner.module.scss
@@ -68,7 +68,7 @@
     justify-content: space-around;
     position: relative;
     overflow: hidden;
-    z-index: 3;
+    z-index: 2;
 
     .img-mail {
         width: 38px;
@@ -115,6 +115,7 @@
             line-height: 100px;
             text-align: center;
             top: 30%;
+            background-color: transparent;
 
             .icon {
                 font-size: 4rem;
