--- a/src/Layout/DefaultLayout/Footer/Footer.module.scss
+++ b/src/Layout/DefaultLayout/Footer/Footer.module.scss
@@ -17,11 +17,12 @@ root {
     --section-space-mobile: 80px;
     --section-title-space: 70px;
     --ripple-ani-duration: 5s;
+    --font-Roboto: 'Roboto', serif;
 }
 
 .footer {
     width: 100%;
-    height: 742px;
+    min-height: 742px;
 }
 
 .bg-main {
@@ -29,14 +30,14 @@ root {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    padding: 40px;
+    padding: 50px 40px;
     position: relative;
     z-index: 1;
-    height: 100%;
+    min-height: 742px;
 }
 
 .footer-container {
-    max-width: 1444px;
+    max-width: 1445px;
     margin: 0 auto;
 
     .footer-top {
@@ -49,33 +50,70 @@ root {
             .wrap-icon {
                 width: 60px;
                 height: 60px;
-                border: 1px solid #cacaca;
                 border-radius: 50%;
                 line-height: 60px;
                 text-align: center;
-                backdrop-filter: blur(9.8px);
+                background: rgba(255, 255, 255, 0.12);
+                border: 1px solid rgba(255, 255, 255, 0.34);
+                position: relative;
 
-                .icon {
-                    font-size: 2.4rem;
+                &::before {
+                    content: '';
+                    position: absolute;
+                    left: 0;
+                    top: 0;
+                    background: var(--theme-color);
+                    border-radius: 50%;
+                    height: 20px;
+                    width: 20px;
+                    z-index: -2;
+                }
+
+                &::after {
+                    content: '';
+                    position: absolute;
+                    height: 30px;
+                    width: 30px;
+                    top: auto;
+                    background: var(--theme-color);
+                    border-radius: 50%;
+                    bottom: -6px;
+                    left: auto;
+                    right: 0;
+                    z-index: -2;
+                }
+
+                .icon-location,
+                .icon-phone,
+                .icon-envelope {
+                    font-size: 24px;
                     color: var(--white-color);
-
                     line-height: 60px;
                     border-radius: 50%;
                 }
             }
 
             .content {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
                 p {
                     font-size: 1.4rem;
                     color: #b3c1d3;
+                    margin-bottom: 3px;
                 }
 
                 a {
                     font-size: 2rem;
                     font-weight: 600;
+                    display: block;
                     color: var(--white-color);
                     text-decoration: none;
-                    transition: color 0.3s;
+                    transition: all 0.3s ease;
+
+                    &:hover {
+                        color: var(--theme-color);
+                    }
                 }
             }
         }
@@ -91,10 +129,10 @@ root {
         // background-position: center;
         // background-repeat: no-repeat;
         // background-size: cover;
-        padding: 80px 0 40px;
+        padding: 80px 0 0;
         border-radius: 20px;
         border: 1px solid rgba(255, 255, 255, 0.01);
-        margin-top: 20px;
+        margin-top: 40px;
         position: relative;
 
         &::before {
@@ -109,7 +147,9 @@ root {
         }
 
         .box2 {
-            padding-left: 40px;
+            padding: 0 25px;
+            margin-right: 40px;
+
             .img {
                 width: 240px;
                 height: 87px;
@@ -122,6 +162,7 @@ root {
             }
             .social {
                 color: var(--white-color);
+                margin-bottom: 40px;
 
                 h6 {
                     font-size: 2rem;
@@ -129,7 +170,7 @@ root {
                     color: var(--white-color);
                     margin-bottom: 15px;
                 }
-                
+
                 .wrap-iconSocial {
                     display: flex;
                     gap: 10px;
@@ -142,8 +183,8 @@ root {
                         line-height: 45px;
                         text-align: center;
                         color: var(--white-color);
-                        background-color: #1e2c36;
-                        border: 1px solid #1e2c36;
+                        background-color: #2a435647;
+                        border: 1px solid #2a435647;
                         transition: all 0.3s ease;
                         margin-right: 5px;
 
@@ -163,6 +204,141 @@ root {
                     }
                 }
             }
+        }
+
+        .footerCategoryLink {
+            display: flex;
+            flex-direction: column;
+            align-items: start;
+            padding: 0 25px;
+
+            .fCL-heading {
+                color: var(--white-color);
+                text-transform: capitalize;
+                font-size: 2.4rem;
+                font-weight: 600;
+                font-family: var(--font-Roboto);
+                position: relative;
+                padding-bottom: 18px;
+                margin-bottom: 35px;
+
+                &::before {
+                    content: '';
+                    position: absolute;
+                    left: 0;
+                    bottom: 0;
+                    width: 51px;
+                    height: 3px;
+                    background-color: var(--theme-color);
+                    z-index: -1;
+                }
+
+                &::after {
+                    content: '';
+                    position: absolute;
+                    width: 10px;
+                    bottom: 0;
+                    height: 3px;
+                    left: 56px;
+                    border-right: 10px solid var(--theme-color);
+                    box-shadow: 15px 0 0 0 var(--theme-color);
+                }
+            }
+
+            .fcL-Sub {
+                color: #b3c1d3;
+            }
+
+            .fCL-list {
+                .fCL-item {
+                    margin-bottom: 20px;
+
+                    .fCL-link {
+                        display: flex;
+                        align-items: center;
+                        font-size: 1.6rem;
+                        text-decoration: none;
+                        color: #b3c1d3;
+                        transition: color 0.3s;
+                        font-family: var(--font-Roboto);
+
+                        .icon-circle {
+                            font-size: 0.7rem;
+                            color: #b3c1d3;
+                            transition: all 0.3s ease;
+                            margin-right: 10px;
+                        }
+                    }
+
+                    &:hover .fCL-link {
+                        color: var(--theme-color);
+                    }
+
+                    &:hover .icon-circle {
+                        color: var(--theme-color);
+                    }
+                }
+            }
+
+            .input-wrap {
+                position: relative;
+                display: inline;
+
+                .input {
+                    background-color: transparent;
+                    border-radius: 5px;
+                    border: 1px solid #283752;
+                    margin-bottom: 18px;
+                    padding: 0 25px 0 25px;
+                    padding-right: 45px;
+                    width: 100%;
+                    font-weight: 400;
+                    line-height: 1.5;
+                    height: 55px;
+                    color: var(--white-color);
+                    position: relative;
+                    transition: all 0.5s ease;
+
+                    &:focus {
+                        border-color: var(--theme-color);
+                        background-color: rgba(5, 42, 111, 0.6);
+                        color: var(--white-color);
+                    }
+                }
+
+                .icon-email {
+                    position: absolute;
+                    right: 25px;
+                    top: 0;
+                    font-size: 1.6rem;
+                    color: var(--theme-color);
+                    transition: all 0.3s ease;
+                }
+            }
+        }
+    }
+}
+
+.footer-body_footer {
+    margin-top: 40px;
+    padding: 21px 25px;
+    border-top: 1px solid #283752;
+
+    .text {
+        font-size: 1.6rem;
+        color: var(--white-color);
+        font-family: var(--font-Roboto);
+        margin: 0;
+    }
+
+    .wrap-linkEnd {
+        color: #b3c1d3;
+        font-family: var(--font-Roboto);
+        font-size: 1.6rem;
+        text-align: end;
+
+        .link-end {
+            margin-left: 20px;
         }
     }
 }
