--- a/src/pages/Home/PopularCourse/PopularCourse.module.scss
+++ b/src/pages/Home/PopularCourse/PopularCourse.module.scss
@@ -1,9 +1,10 @@
 .pp-course {
-    background-image: url('../../../assets/images/Home/ProductContent/course_bg_1-2.png');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
+    // background-image: url('../../../assets/images/Home/ProductContent/course_bg_1-2.png');
+    // background-position: center;
+    // background-repeat: no-repeat;
+    // background-size: cover;
+    // position: relative;
+    
     padding: 100px 0;
     margin-top: 100px;
 
