--- a/src/pages/Home/EventHome/EventHome.module.scss
+++ b/src/pages/Home/EventHome/EventHome.module.scss
@@ -26,7 +26,7 @@
     --font-Roboto: 'Roboto', serif;
 }
 
-.newsHome {
+.eventHome {
     padding: 80px 0;
     background-color: #f2f6fa;
 }
@@ -37,7 +37,7 @@
     padding: 0 20px;
 }
 
-.news {
+.event {
     min-width: 414px;
     position: relative;
     z-index: 2;
@@ -75,7 +75,6 @@
     border-radius: 15px;
     object-fit: cover; /* Đảm bảo hình vừa khít trong container */
     mask-position: 100% 100%;
-    mask-image: url('../../../assets/images/Home/NewsHome/event_img-shape-2.png');
     mask-size: cover;
     mask-repeat: no-repeat;
 }
